deploy/k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beach
  labels:
    app.kubernetes.io/part-of: beach-complex
