deploy/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beach
  namespace: beach
  labels:
    app.kubernetes.io/name: beach
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: beach-complex
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: beach
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 80
      targetPort: http
